[@mantine/core] Accordion: Fix control background overflow when hovered

--- a/packages/@mantine/core/src/components/Accordion/Accordion.module.css
+++ b/packages/@mantine/core/src/components/Accordion/Accordion.module.css
@@ -95,6 +95,8 @@
 }
 
 .item {
+  overflow: hidden;
+
   @mixin where-light {
     --item-border-color: var(--mantine-color-gray-3);
     --item-filled-color: var(--mantine-color-gray-0);
